# niq_python_test

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
src/ml_eng_interview/: calculate_kpi.py  create_unit_test.py  fix_error_exercise.py  simple_inheritance.py
tests/ml_eng_interview/: test_fix_error_exercise.py
